[package]
name = "net-fs"
description = "(Under Development) A simple distributed file system"
version = "0.0.3"
edition = "2021"
authors = ["Palash Kanti Kundu"]
readme = "README.md"
repository = "https://github.com/Palash90/mem-db"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
